# Ex-Chick-It-Server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  docker-compose.yml
lib/common/core/: serverbase.h
lib/common/packets/: packet.h  registerpacket.h
lib/mysql-cpp/: CMakeLists.txt
scripts/: travis_build.sh
servers/: CMakeLists.txt
servers/gameplay/: CMakeLists.txt
servers/gameplay/packets/protobufs/: action.proto
servers/gameplay/script/: compile-packets-cpp.sh  compile-packets-cs.sh  compile-packets.sh
servers/gameplay/src/: CMakeLists.txt  main.cc
servers/gameplay/src/core/: gameplayserver.cc  gameplayserver.h  logicserver.cc  logicserver.h  util.cc  util.h
servers/gameplay/src/packets/: action.pb.cc  action.pb.h
servers/gameplay/tests/: CMakeLists.txt  test_util.cc  test_util_vector2.cc
servers/login/: CMakeLists.txt  LoginServer  LoginServer.cbp
servers/login/mysql-cpp/: mysql_cpp.cbp
servers/login/sql/: accounts.sql
servers/login/src/: main.cc
servers/login/src/core/: io_service_pool.h  loginserver.cc  loginserver.h  serverbase.h  util.cc  util.h
servers/login/src/packets/: loginpacket.h  packet.h  registerpacket.h
src/: main.cc
src/core/: io_service_pool.cpp  loginserver.cc  loginserver.h  memorystream.cc  memorystream.h
src/packets/: loginpacket.h  packet.h
